objects/HS_Job_Placement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>HS_Store_Opportunity__r.Account_Address__c</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_OJE_starts__c</fullName>
        <label>Date OJE starts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Placement_Starts__c</fullName>
        <label>Date Placement Starts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Activity__c</fullName>
        <label>HS Activity</label>
        <referenceTo>HS_Activity__c</referenceTo>
        <relationshipLabel>HS Job Placements</relationshipLabel>
        <relationshipName>HS_Job_Placements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HS_Store_Opportunity__c</fullName>
        <label>HS Store Opportunity</label>
        <referenceTo>HS_Partner_Opportunity__c</referenceTo>
        <relationshipLabel>HS Job Placements</relationshipLabel>
        <relationshipName>HS_Job_Placements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location_of_OJE__c</fullName>
        <label>Location of OJE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>HS_Store_Opportunity__r.HS_Partner_Engagement__r.Name</formula>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Status__c</fullName>
        <label>Placement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OJE</fullName>
                </value>
                <value>
                    <fullName>OJE Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Placement Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placement_confirmed_by_HS__c</fullName>
        <label>Placement confirmed by HS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Placement_confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will send an email to YP when ticked</inlineHelpText>
        <label>Send Placement confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_OJE_Starts__c</fullName>
        <label>Time OJE Starts</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Email_Address__c</fullName>
        <label>YP Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>YP_Name__c</fullName>
        <formula>HS_Activity__r.Young_Person__r.FirstName &amp;&quot; &quot;&amp; HS_Activity__r.Young_Person__r.LastName</formula>
        <label>YP Name</label>
        <type>Text</type>
    </fields>
    <label>HS Job Placement</label>
    <nameField>
        <displayFormat>HSJP-{0000000}</displayFormat>
        <label>HS Job Placement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HS Job Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>